added japanese page

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -13,6 +13,8 @@ website:
         text: Home
       - href: publication.qmd
         text: Publication
+      - href: japanese.qmd
+        text: Japanese (日本語)
 
 format:
   html:
