--- a/_quarto.yml
+++ b/_quarto.yml
@@ -21,12 +21,14 @@ website:
         text: "日本語"
         icon: globe
     page-navigation: true
+  page-footer: 
+    right: "Copyright 2025, Takamitsu Ohigashi"
+
+
 
 format:
   html:
     theme: minty
     css: styles.css
     toc: true
-
-editor: visual
 
